Ajout du slider et de son ajustement pour le responsive

--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,16 @@
     <article>
     </article>
     <footer>
-
+        <nav>
+            <ul>
+                <li><a href="#">Link </a></li>
+                <li><a href="#">Link </a></li>
+                <li><a href="#">Link </a></li>
+                <li><a href="#">Link </a></li>
+                <li><a href="#">Link </a></li>
+                <li><a href="#">Link </a></li>
+            </ul>
+        </nav>
     </footer>
 </main>
 <script src="JavaScript/AccueilVideoPlugin.js"></script>
