Ajout sur le footer

--- a/Index.html
+++ b/Index.html
@@ -27,21 +27,21 @@
         <div id='Accueil-slider'>
             <div class="slider-inner">
                 <ul>
-                    <li><a class="Image" href="Image/1.jpg"></a></li>
+                    <li><a class="ns-img" href="Image/1.jpg"></a></li>
                     <li>
                         <div class="Video">
                             <iframe src="https://player.vimeo.com/video/93292237" frameborder="0" allowfullscreen></iframe>
                         </div>
-                        <a class="Image" href="Image/2.jpg"></a>
-                        <div class="caption">Supports Youtube, Vimeo and HTML video/audio</div>
+                        <a class="ns-img" href="Image/2.jpg"></a>
+                        <div class="caption">Un grand classic pour les amateurs</div>
                         <div class="video-playbutton-layer"></div>
                     </li>
                     <li>
                         <div class="Video">
                             <iframe src="https://www.youtube.com/embed/Bp119VFEjHE?enablejsapi=1&start=216&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1" frameborder="0" allowfullscreen data-autoplay="false"></iframe>
                         </div>
-                        <a class="Image" href="Image/3.jpg"></a>
-                        <div class="caption">This video starts from 3:36</div>
+                        <a class="ns-img" href="Image/3.jpg"></a>
+                        <div class="caption">Notre Main event de cette semaine</div>
                         <div class="video-playbutton-layer"></div>
                     </li>
                     <li>
@@ -52,7 +52,7 @@
                         </div>
                     </li>
                     <li>
-                            <a class="Image" href="Image/5.jpg"></a>
+                            <a class="ns-img" href="Image/5.jpg"></a>
                         <div class="Video" style="background-color:transparent;height:auto;top:auto;bottom:0px;">
                             <audio controls data-autoplay="1">
                                 <source src="Video/mcaudio.mp3" type="audio/mpeg">
@@ -79,6 +79,8 @@
                 <li><a href="#">Link </a></li>
             </ul>
         </nav>
+
+
     </footer>
 </main>
 <script src="JavaScript/AccueilVideoPlugin.js"></script>
