Ajout des images et du slider

--- a/Index.html
+++ b/Index.html
@@ -27,33 +27,33 @@
         <div id='Accueil-slider'>
             <div class="slider-inner">
                 <ul>
-                    <li><a class="ns-img" href="Image/1.jpg"></a></li>
+                    <li><a class="ns-img" href="Image/LatinoCulturalDSC_0265.jpg"></a></li>
                     <li>
-                        <div class="Video">
-                            <iframe src="https://player.vimeo.com/video/93292237" frameborder="0" allowfullscreen></iframe>
+                        <div class="video">
+                            <iframe src="https://player.vimeo.com/video/73361277" frameborder="0" allowfullscreen></iframe>
                         </div>
-                        <a class="ns-img" href="Image/2.jpg"></a>
+                        <a class="ns-img" href="Image/Solitario%20vs%20Villano%20III.jpg"></a>
                         <div class="caption">Un grand classic pour les amateurs</div>
                         <div class="video-playbutton-layer"></div>
                     </li>
                     <li>
-                        <div class="Video">
-                            <iframe src="https://www.youtube.com/embed/Bp119VFEjHE?enablejsapi=1&start=216&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1" frameborder="0" allowfullscreen data-autoplay="false"></iframe>
+                        <div class="video">
+                            <iframe src="https://www.youtube.com/embed/mqsU7O5-fVY?enablejsapi=1&start=216&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1" frameborder="0" allowfullscreen data-autoplay="false"></iframe>
                         </div>
-                        <a class="ns-img" href="Image/3.jpg"></a>
+                        <a class="ns-img" href="Image/Female-lucha.jpg"></a>
                         <div class="caption">Notre Main event de cette semaine</div>
                         <div class="video-playbutton-layer"></div>
                     </li>
                     <li>
-                        <div class="Video">
+                        <div class="video">
                             <video controls width="100%">
-                                <source src="Video/mcvideo.mp4" type="video/mp4" />
+                                <source src="Video/Lucha%20Libre!!!.mp4" type="video/mp4" />
                             </video>
                         </div>
                     </li>
                     <li>
-                            <a class="ns-img" href="Image/5.jpg"></a>
-                        <div class="Video" style="background-color:transparent;height:auto;top:auto;bottom:0px;">
+                            <a class="ns-img" href="Image/coverstory1_468.jpg"></a>
+                        <div class="video" style="background-color:transparent;height:auto;top:auto;bottom:0px;">
                             <audio controls data-autoplay="1">
                                 <source src="Video/mcaudio.mp3" type="audio/mpeg">
                             </audio>
