--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
         <div id='Accueil-slider'>
             <div class="slider-inner">
                 <ul>
-                    <li><a class="ns-img" href="Image/LatinoCulturalDSC_0265.jpg"></a></li>
+                    <li><a class="ns-img" href="Image/Thunder-vs.-U.-Guerrero.jpg"></a></li>
                     <li>
                         <div class="video">
                             <iframe src="https://player.vimeo.com/video/73361277" frameborder="0" allowfullscreen></iframe>
@@ -40,7 +40,7 @@
                         <div class="video">
                             <iframe src="https://www.youtube.com/embed/mqsU7O5-fVY?enablejsapi=1&start=216&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1" frameborder="0" allowfullscreen data-autoplay="false"></iframe>
                         </div>
-                        <a class="ns-img" href="Image/Female-lucha.jpg"></a>
+                        <a class="ns-img" href="Image/coverstory1_468.jpg"></a>
                         <div class="caption">Notre Main event de cette semaine</div>
                         <div class="video-playbutton-layer"></div>
                     </li>
@@ -52,7 +52,7 @@
                         </div>
                     </li>
                     <li>
-                            <a class="ns-img" href="Image/coverstory1_468.jpg"></a>
+                            <a class="ns-img" href="Image/Female-lucha.jpg"></a>
                         <div class="video" style="background-color:transparent;height:auto;top:auto;bottom:0px;">
                             <audio controls data-autoplay="1">
                                 <source src="Video/mcaudio.mp3" type="audio/mpeg">
