css gallerie lutteur

--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Gallerie Luchador</title>
@@ -8,7 +8,6 @@
 </head>
 <body>
 <header>
-    </header>
         <nav>
 
             <ul>
@@ -21,54 +20,53 @@
                 <li><a href="#">Link </a></li>
             </ul>
         </nav>
+    </header>
 
-<main>
+<main id="luchador">
 
-    <div id="luchador1">
+    <h1>LA GALLERIA DE LOS LUCHADORES</h1>
+
+    <ul>
+
+    <li>
+        <img src="Image/luchador1.jpg" alt="luchador1"/>
         <h2>STUKA EL GALLO</h2>
         <a href="details_luchador_1.html">FICHE</a>
-        <img src="Image/luchador1.jpg" alt="luchador1"/>
-    </div>
+    </li>
 
-    <div id="luchador2">
+    <li>
+        <img src="Image/luchador2.jpg" alt="luchador2"/>
         <h2>NEGRO CASAS</h2>
         <a href="details_luchador_2.html">FICHE</a>
-        <img src="Image/luchador2.jpg" alt="luchador2"/>
+    </li>
 
 
-    </div>
-
-    <div id="luchador3">
+    <li>
+        <img src="Image/luchador3.jpg" alt="luchador3"/>
         <h2>SANGRE AZTECA</h2>
         <a href="details_luchador_3.html">FICHE</a>
-        <img src="Image/luchador3.jpg" alt="luchador3"/>
+    </li>
 
-
-    </div>
-
-    <div id="luchador4">
+    <li>
+        <img src="Image/luchador4.jpg" alt="luchador4"/>
         <h2>AVERNO</h2>
         <a href="details_luchador_4.html">FICHE</a>
-        <img src="Image/luchador4.jpg" alt="luchador4"/>
+    </li>
 
 
-    </div>
-
-    <div id="luchador5">
+    <li>
+        <img src="Image/luchador5.jpg" alt="luchador5"/>
         <h2>MEPHISTO</h2>
         <a href="details_luchador_5.html">FICHE</a>
-        <img src="Image/luchador5.jpg" alt="luchador5"/>
+    </li>
 
-
-    </div>
-
-    <div id="luchador6">
+    <li>
+        <img src="Image/luchador6.jpg" alt="luchador6"/>
         <h2>HECTOR GARZA</h2>
         <a href="details_luchador_6.html">FICHE</a>
-        <img src="Image/luchador6.jpg" alt="luchador6"/>
+    </li>
 
-
-    </div>
+     </ul>
 
 </main>
 
