pages details_luchador

--- a/details_luchador_1.html
+++ b/details_luchador_1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>STUKE EL GALLO</title>
+    <title>STUKA EL GALLO</title>
     <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -25,9 +25,11 @@
 
 </header>
 
-<main>
+<main id="details">
+    <section></section>
     <h2>STUKA EL GALLO</h2>
-    <img src="Image/luchador1.jpg" alt="luchador3"/>
+    <img src="Image/luchador1.jpg" alt="luchador1"/>
+    <meter value="3" min="0" max="4" low="1" high="3">0.5 sur 4</meter>
 
 
 </main>
