--- a/details_luchador_4.html
+++ b/details_luchador_4.html
@@ -28,6 +28,7 @@
 <main>
     <h2>AVERNO</h2>
     <img src="Image/luchador4.jpg" alt="luchador4"/>
+    <meter value="0.5" min="0" max="4" low="1" high="3">0.5 sur 4</meter>
 
 
 </main>
