--- a/details_luchador_5.html
+++ b/details_luchador_5.html
@@ -28,6 +28,7 @@
 <main>
     <h2>MEPHISTO</h2>
     <img src="Image/luchador5.jpg" alt="luchador5"/>
+    <meter value="3" min="0" max="4" low="1" high="3">0.5 sur 4</meter>
 
 </main>
 
