--- a/details_luchador_6.html
+++ b/details_luchador_6.html
@@ -25,9 +25,10 @@
 
 </header>
 
-<main><
+<main>
     <h2>HECTOR GARZA</h2>
     <img src="Image/luchador6.jpg" alt="luchador6"/>
+    <meter value="4" min="0" max="4" low="1" high="3">0.5 sur 4</meter>
 
 </main>
 
