--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -31,39 +31,39 @@
     <li>
         <img src="Image/luchador1.jpg" alt="luchador1"/>
         <h2>STUKA EL GALLO</h2>
-        <a href="details_luchador_1.html">FICHE</a>
+        <a href="details_luchador_1.html">Click para ver la ficha completo</a>
     </li>
 
     <li>
         <img src="Image/luchador2.jpg" alt="luchador2"/>
-        <h2>NEGRO CASAS</h2>
-        <a href="details_luchador_2.html">FICHE</a>
+        <h2>MALO CASAS</h2>
+        <a href="details_luchador_2.html">Click para ver la ficha completo</a>
     </li>
 
 
     <li>
         <img src="Image/luchador3.jpg" alt="luchador3"/>
         <h2>SANGRE AZTECA</h2>
-        <a href="details_luchador_3.html">FICHE</a>
+        <a href="details_luchador_3.html">Click para ver la ficha completo</a>
     </li>
 
     <li>
         <img src="Image/luchador4.jpg" alt="luchador4"/>
         <h2>AVERNO</h2>
-        <a href="details_luchador_4.html">FICHE</a>
+        <a href="details_luchador_4.html">Click para ver la ficha completo</a>
     </li>
 
 
     <li>
         <img src="Image/luchador5.jpg" alt="luchador5"/>
         <h2>MEPHISTO</h2>
-        <a href="details_luchador_5.html">FICHE</a>
+        <a href="details_luchador_5.html">Click para ver la ficha completo</a>
     </li>
 
     <li>
         <img src="Image/luchador6.jpg" alt="luchador6"/>
         <h2>HECTOR GARZA</h2>
-        <a href="details_luchador_6.html">FICHE</a>
+        <a href="details_luchador_6.html">Click para ver la ficha completo</a>
     </li>
 
      </ul>
