--- a/details_luchador_2.html
+++ b/details_luchador_2.html
@@ -28,6 +28,7 @@
 <main>
     <h2>NEGRO CASAS</h2>
     <img src="Image/luchador2.jpg" alt="luchador2"/>
+    <meter value="4" min="0" max="4" low="1" high="3">0.5 sur 4</meter>
 
 
 
