--- a/details_luchador_3.html
+++ b/details_luchador_3.html
@@ -28,6 +28,7 @@
 <main>
     <h2>SANGRE AZTECA</h2>
     <img src="Image/luchador3.jpg" alt="luchador3"/>
+    <meter value="2" min="0" max="4" low="1" high="3"></meter>
 
 
 </main>
