pages details_luchador

--- a/details_luchador_1.html
+++ b/details_luchador_1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>STUKA EL GALLO</title>
     <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
@@ -26,11 +27,22 @@
 </header>
 
 <main id="details">
-    <section></section>
-    <h2>STUKA EL GALLO</h2>
-    <img src="Image/luchador1.jpg" alt="luchador1"/>
-    <meter value="3" min="0" max="4" low="1" high="3">0.5 sur 4</meter>
+    <section>
 
+     <figure>
+         <figcaption>STUKA EL GALLO</figcaption>
+       <img src="Image/luchador1.jpg" alt="luchador1"/>
+     </figure>
+       <article>
+           <p>Nombre completo: Ernan Vasquez</p>
+           <p>Fecha de nacimiento: 1976-12-18</p>
+           <p>Nationalidad: Mexicano</p>
+           <p>Años activo: 12 años</p>
+           <p>Residencia: Morelia </p>
+           <p>Victorias: 38</p>
+           <meter value="3" min="0" max="4" low="1" high="3"></meter>
+       </article>
+    </section>
 
 </main>
 
