--- a/details_luchador_2.html
+++ b/details_luchador_2.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>NEGRO CASAS</title>
+    <title>MALO CASAS</title>
     <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
@@ -25,10 +26,23 @@
 
 </header>
 
-<main>
-    <h2>NEGRO CASAS</h2>
-    <img src="Image/luchador2.jpg" alt="luchador2"/>
-    <meter value="4" min="0" max="4" low="1" high="3">0.5 sur 4</meter>
+<main id="details">
+    <section>
+
+        <figure>
+            <figcaption>MALO CASAS</figcaption>
+            <img src="Image/luchador2.jpg" alt="luchador2"/>
+        </figure>
+        <article>
+            <p>Nombre completo: Luis Pena</p>
+            <p>Fecha de nacimiento: 1982-08-10</p>
+            <p>Nationalidad: Mexicano</p>
+            <p>Años activo: 10 años</p>
+            <p>Residencia: Leon </p>
+            <p>Victorias: 27</p>
+            <meter value="3" min="0" max="4" low="1" high="3"></meter>
+        </article>
+    </section>
 
 
 
