--- a/details_luchador_3.html
+++ b/details_luchador_3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>SANGRE AZTECA</title>
     <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
@@ -25,11 +26,23 @@
 
 </header>
 
-<main>
-    <h2>SANGRE AZTECA</h2>
-    <img src="Image/luchador3.jpg" alt="luchador3"/>
-    <meter value="2" min="0" max="4" low="1" high="3"></meter>
+<main id="details">
+    <section>
 
+        <figure>
+            <figcaption>SANGRE AZTECA</figcaption>
+            <img src="Image/luchador3.jpg" alt="luchador3"/>
+        </figure>
+        <article>
+            <p>Nombre completo: Alexandro Navaro</p>
+            <p>Fecha de nacimiento: 1979-08-05</p>
+            <p>Nationalidad: Mexicano</p>
+            <p>Años activo: 13 años</p>
+            <p>Residencia: Zacatecas </p>
+            <p>Victorias: 32</p>
+            <meter value="3" min="0" max="4" low="1" high="3"></meter>
+        </article>
+    </section>
 
 </main>
 
