--- a/details_luchador_4.html
+++ b/details_luchador_4.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>AVERNO</title>
     <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
@@ -25,11 +26,23 @@
 
 </header>
 
-<main>
-    <h2>AVERNO</h2>
-    <img src="Image/luchador4.jpg" alt="luchador4"/>
-    <meter value="0.5" min="0" max="4" low="1" high="3">0.5 sur 4</meter>
+<main id="details">
+    <section>
 
+        <figure>
+            <figcaption>AVERNO</figcaption>
+            <img src="Image/luchador4.jpg" alt="luchador4"/>
+        </figure>
+        <article>
+            <p>Nombre completo: Juan Romero</p>
+            <p>Fecha de nacimiento: 1975-07-05</p>
+            <p>Nationalidad: Mexicano</p>
+            <p>Años activo: 17 años</p>
+            <p>Residencia: Monterey </p>
+            <p>Victorias: 37</p>
+            <meter value="4" min="0" max="5" low="1" high="3"></meter>
+        </article>
+    </section>
 
 </main>
 
