--- a/details_luchador_5.html
+++ b/details_luchador_5.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>MEPHISTO</title>
     <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
@@ -25,10 +26,24 @@
 
 </header>
 
-<main>
-    <h2>MEPHISTO</h2>
-    <img src="Image/luchador5.jpg" alt="luchador5"/>
-    <meter value="3" min="0" max="4" low="1" high="3">0.5 sur 4</meter>
+<main id="details">
+    <section>
+
+        <figure>
+            <figcaption>MEPHISTO</figcaption>
+            <img src="Image/luchador5.jpg" alt="luchador5"/>
+        </figure>
+        <article>
+            <p>Nombre completo: Hector Obrador</p>
+            <p>Fecha de nacimiento: 1981-02-09</p>
+            <p>Nationalidad: Español</p>
+            <p>Años activo: 15 años</p>
+            <p>Residencia: Valencia </p>
+            <p>Victorias: 22</p>
+            <meter value="3" min="0" max="5" low="1" high="3"></meter>
+        </article>
+    </section>
+
 
 </main>
 
