--- a/details_luchador_6.html
+++ b/details_luchador_6.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HECTOR GARZA</title>
+    <title>GALLO LOCO</title>
     <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
@@ -25,11 +26,23 @@
 
 </header>
 
-<main>
-    <h2>HECTOR GARZA</h2>
-    <img src="Image/luchador6.jpg" alt="luchador6"/>
-    <meter value="4" min="0" max="4" low="1" high="3">0.5 sur 4</meter>
+<main id="details">
+    <section>
 
+        <figure>
+            <figcaption>GALLO LOCO</figcaption>
+            <img src="Image/luchador6.jpg" alt="luchador6"/>
+        </figure>
+        <article>
+            <p>Nombre completo: Ernesto Sanchez</p>
+            <p>Fecha de nacimiento: 1973-04-10</p>
+            <p>Nationalidad: Mexicano</p>
+            <p>Años activo: 20 años</p>
+            <p>Residencia: Aguascaliente </p>
+            <p>Victorias: 50</p>
+            <meter value="5" min="0" max="5" low="1" high="3"></meter>
+        </article>
+    </section>
 </main>
 
 
