--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -62,7 +62,7 @@
 
     <li>
         <img src="Image/luchador6.jpg" alt="luchador6"/>
-        <h2>HECTOR GARZA</h2>
+        <h2>GALLO LOCO</h2>
         <a href="details_luchador_6.html">Click para ver la ficha completo</a>
     </li>
 
