--- a/details_luchador_4.html
+++ b/details_luchador_4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>AVERNO</title>
     <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
-    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
