--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Gallerie Luchador</title>
     <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
+    <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
