background details et gallerie

--- a/details_luchador_2.html
+++ b/details_luchador_2.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
-<body>
+<body id="det_back">
 
 <header>
     <nav>
@@ -44,7 +44,7 @@
         </article>
     </section>
 
-
+    <audio autoplay loop src="music/" loop/>
 
 </main>
 
