--- a/details_luchador_3.html
+++ b/details_luchador_3.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
-<body>
+<body id="det_back">
 
 <header>
     <nav>
@@ -43,6 +43,8 @@
             <meter value="3" min="0" max="4" low="1" high="3"></meter>
         </article>
     </section>
+
+    <audio autoplay loop src="music/" loop/>
 
 </main>
 
