--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-<body>
+<body id="bckg">
 <header>
         <nav>
 
@@ -68,6 +68,8 @@
     </li>
 
      </ul>
+
+    <audio autoplay loop src="music/something%20special.wav" loop/>
 
 </main>
 
