--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -15,7 +15,7 @@
                 <li><a href="#">Link </a></li>
                 <li><a href="#">Link </a></li>
                 <li><a href="#">Link </a></li>
-                <li><a href="#"><img src="Image/lucha_libre_logo.png" height="100" width="200"></a> </li>
+                <li><a href="#"><img src="Image/logo-solo.png" height="100" width="200"></a> </li>
                 <li><a href="#">Link </a></li>
                 <li><a href="#">Link </a></li>
                 <li><a href="#">Link </a></li>
