--- a/details_luchador_2.html
+++ b/details_luchador_2.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
-<body id="det_back">
+<body id="bck_lutteurs">
 
 <header>
     <nav>
@@ -31,7 +31,7 @@
 
         <figure>
             <figcaption>MALO CASAS</figcaption>
-            <img src="Image/luchador2.jpg" alt="luchador2"/>
+            <img src="Image/luchador2.png" alt="luchador2"/>
         </figure>
         <article>
             <p>Nombre completo: Luis Pena</p>
