--- a/details_luchador_3.html
+++ b/details_luchador_3.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
-<body id="det_back">
+<body id="bck_lutteurs">
 
 <header>
     <nav>
@@ -31,7 +31,7 @@
 
         <figure>
             <figcaption>SANGRE AZTECA</figcaption>
-            <img src="Image/luchador3.jpg" alt="luchador3"/>
+            <img src="Image/luchador3.png" alt="luchador3"/>
         </figure>
         <article>
             <p>Nombre completo: Alexandro Navaro</p>
