--- a/details_luchador_4.html
+++ b/details_luchador_4.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
-<body id="det_back">
+<body id="bck_lutteurs">
 
 <header>
     <nav>
@@ -31,7 +31,7 @@
 
         <figure>
             <figcaption>AVERNO</figcaption>
-            <img src="Image/luchador4.jpg" alt="luchador4"/>
+            <img src="Image/luchador4.png" alt="luchador4"/>
         </figure>
         <article>
             <p>Nombre completo: Juan Romero</p>
