--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-<body id="bckg">
+<body id="bck_lutteurs">
 <header>
         <nav>
 
@@ -30,39 +30,39 @@
     <ul>
 
     <li>
-        <img src="Image/luchador1.jpg" alt="luchador1"/>
+        <img src="Image/luchador1.png" alt="luchador1"/>
         <h2>STUKA EL GALLO</h2>
         <a href="details_luchador_1.html">Click para ver la ficha completo</a>
     </li>
 
     <li>
-        <img src="Image/luchador2.jpg" alt="luchador2"/>
+        <img src="Image/luchador2.png" alt="luchador2"/>
         <h2>MALO CASAS</h2>
         <a href="details_luchador_2.html">Click para ver la ficha completo</a>
     </li>
 
 
     <li>
-        <img src="Image/luchador3.jpg" alt="luchador3"/>
+        <img src="Image/luchador3.png" alt="luchador3"/>
         <h2>SANGRE AZTECA</h2>
         <a href="details_luchador_3.html">Click para ver la ficha completo</a>
     </li>
 
     <li>
-        <img src="Image/luchador4.jpg" alt="luchador4"/>
+        <img src="Image/luchador4.png" alt="luchador4"/>
         <h2>AVERNO</h2>
         <a href="details_luchador_4.html">Click para ver la ficha completo</a>
     </li>
 
 
     <li>
-        <img src="Image/luchador5.jpg" alt="luchador5"/>
+        <img src="Image/luchador5.png" alt="luchador5"/>
         <h2>MEPHISTO</h2>
         <a href="details_luchador_5.html">Click para ver la ficha completo</a>
     </li>
 
     <li>
-        <img src="Image/luchador6.jpg" alt="luchador6"/>
+        <img src="Image/luchador6.png" alt="luchador6"/>
         <h2>GALLO LOCO</h2>
         <a href="details_luchador_6.html">Click para ver la ficha completo</a>
     </li>
