--- a/details_luchador_1.html
+++ b/details_luchador_1.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
-<body id="det_back">
+<body id="bck_lutteurs">
 
 <header>
     <nav>
@@ -31,7 +31,7 @@
 
      <figure>
          <figcaption>STUKA EL GALLO</figcaption>
-       <img src="Image/luchador1.jpg" alt="luchador1"/>
+       <img src="Image/luchador1.png" alt="luchador1"/>
      </figure>
        <article>
            <p>Nombre completo: Ernan Vasquez</p>
