--- a/details_luchador_5.html
+++ b/details_luchador_5.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
-<body id="det_back">
+<body id="bck_lutteurs">
 
 <header>
     <nav>
@@ -31,7 +31,7 @@
 
         <figure>
             <figcaption>MEPHISTO</figcaption>
-            <img src="Image/luchador5.jpg" alt="luchador5"/>
+            <img src="Image/luchador5.png" alt="luchador5"/>
         </figure>
         <article>
             <p>Nombre completo: Hector Obrador</p>
