--- a/details_luchador_6.html
+++ b/details_luchador_6.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
-<body id="det_back">
+<body id="bck_lutteurs">
 
 <header>
     <nav>
@@ -31,7 +31,7 @@
 
         <figure>
             <figcaption>GALLO LOCO</figcaption>
-            <img src="Image/luchador6.jpg" alt="luchador6"/>
+            <img src="Image/luchador6.png" alt="luchador6"/>
         </figure>
         <article>
             <p>Nombre completo: Ernesto Sanchez</p>
