Page des Events et Css

--- a/Index.html
+++ b/Index.html
@@ -80,6 +80,13 @@
             </ul>
         </nav>
 
+        <div>
+            <li><a href="#"><img src="Image/facebook.png" height="75" width="75"></a> </li>
+            <li><a href="#"><img src="Image/twitter.png" height="75" width="75"></a> </li>
+            <li><a href="#"><img src="Image/youtube.png" height="75" width="75"></a> </li>
+            <li><a href="#"><img src="Image/google.png" height="75" width="75"></a> </li>
+        </div>
+
 
     </footer>
 </main>
