reglage css sur la page Events et ajout du responsive necessaire pour le moment

--- a/Events.html
+++ b/Events.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
 
 </head>
-<body>
+<body id="Events">
 <main>
                                        <!--premier tableau de la page events-->
 <!-- Table header -->
-<table>
+<table class="group">
     <caption>Maint Event Of the month</caption>
 <thead>
 <tr>
@@ -35,7 +35,7 @@
 </table>
                                        <!----------------------------premier tableau de la page events------------------------>
 
-                                       <table>
+                                       <table class="group">
     <caption>Maint Event Of the month</caption>
     <thead>
     <tr>
@@ -60,7 +60,7 @@
 </table>
                                        <!---------------------------premier tableau de la page events--------------------->
 
-                                       <table>
+                                       <table class="group">
     <caption>Maint Event Of the month</caption>
     <thead>
     <tr>
@@ -85,7 +85,7 @@
 </table>
                                        <!-------------------premier tableau de la page events--------------------------->
 
-                                       <table>
+                                       <table class="group">
     <caption>Maint Event Of the month</caption>
     <thead>
     <tr>
