logo menu et links menu

--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -14,11 +14,11 @@
 
                 <li><a href="gallerie_lutteur.html">Luchadores</a></li>
                 <li><a href="Events.html">Eventos</a></li>
-                <li><a href="Index.html"><img src="Image/logo-solo.png" height="150" width="250"></a>/li>
                 <li><a href="contacts.html">Contacto</a></li>
                 <li><a href="#">Info</a></li>
             </ul>
         </nav>
+        <a href="Index.html"><img src="Image/logo-solo.png" height="150" width="250"></a>
     </header>
 
 <main id="luchador">
