--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -67,9 +67,11 @@
 
      </ul>
 
+    <p>LUCHADORES</p>
+
     <audio autoplay loop src="music/something%20special.wav" loop/>
 
-    <h3>LUCHADORES</h3>
+
 
 </main>
 
