Ajout Typo pour le site
css contacts
html contacts

--- a/contacts.html
+++ b/contacts.html
@@ -95,7 +95,7 @@
                         </ul>
                     </fieldset>
 
-                    <ul>
+                    <ul><!--VALIDATION-->
                         <li><!--soumettre-->
                             <input type="submit" value="Soumettre"/>
                         </li>
