--- a/produits.html
+++ b/produits.html
@@ -8,7 +8,7 @@
         <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet' type='text/css'>
     </head>
-    <body id="produits">
+    <body id="infos">
         <header>
             <nav>
                 <ul>
@@ -24,12 +24,12 @@
         <!--main-->
         <main>
             <section>
-                <h2>Passez à la boutique</h2>
+                <h2>Infos sur les organisateurs</h2>
 
             </section>
 
             <aside>
-                <p>Produits</p>
+                <p>Infos</p>
             </aside>
         </main>
 
