footer+links connect ect....

--- a/Events.html
+++ b/Events.html
@@ -15,7 +15,7 @@
             <li><a href="gallerie_lutteur.html">Luchadores</a></li>
             <li><a href="Events.html">Eventos</a></li>
             <li><a href="contacts.html">Contacto</a></li>
-            <li><a href="#">Info</a></li>
+            <li><a href="produits.html">Info</a></li>
         </ul>
     </nav>
     <a href="Index.html"><img src="Image/logo-solo.png" height="150" width="250"></a>
@@ -131,6 +131,14 @@
             <li><a href="Index.html">Index</a></li>
             <li><a href="contacts.html">Contacto</a></li>
             <li><a href="#">Info</a></li>
+
+        </ul>
+
+        <ul id="social">
+            <li><a href="https://fr-ca.facebook.com/"><img src="image/facebook.png" alt="facebook"/></a></li>
+            <li><a href="https://www.google.ca/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=google"><img src="image/google.png" alt="google"/></a></li>
+            <li><a href="https://www.youtube.com/?hl=fr&gl=CA"><img src="image/youtube.png" alt="youtube"/></a></li>
+            <li><a href="https://twitter.com/?lang=fr"><img src="image/twitter.png" alt="twitter"/></a></li>
         </ul>
     </nav>
 
